--- a/app/src/main/res/layout/activity_static_reference.xml
+++ b/app/src/main/res/layout/activity_static_reference.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:background="#ff0000">
 
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
